objects/CMPL123__RDC_Advanced_Lookup_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>CMPL123__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__Search_Fields__c</fullName>
        <label>Search Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Source_Lookup_Field__c</fullName>
        <label>Source Lookup Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Source_SObject__c</fullName>
        <label>Source SObject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__WF_Locked_Fields__c</fullName>
        <label>Result Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>RDC Advanced Lookup Configuration</label>
    <pluralLabel>RDC Advanced Lookup Configurations</pluralLabel>
</CustomObject>